@@ -1,3 +1,8 @@
+Fri Mar 28 20:01:24 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - drivers/sstate.c,upsd.c: don't terminate connection on EAGAIN,
+   EINTR or if no data was received (these are not really errors)
+
 Thu Mar 27 21:36:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
 
  - drivers/dstate.c: fix memory leak (minor)
